--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "pehape/text-image",
+    "type": "library",
     "description": "A simple PHP library to convert text to images.",
+    "keywords": "image, text, converting, gd",
     "license": ["BSD-3-Clause", "GPL-2.0", "GPL-3.0"],
     "authors": [
         {
@@ -9,7 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.4.0"
     },
     "require-dev": {
         "codeception/codeception": "2.1.*"
