--- a/composer.json
+++ b/composer.json
@@ -7,17 +7,33 @@
     "authors": [
         {
             "name": "Tomas Rathouz",
-            "homepage": "http://www.pehape.cz"
+            "email": "trathouz@gmail.com",
+            "homepage": "http://pehape.cz"
         }
     ],
+    "support": {
+        "email": "trathouz@gmail.com",
+        "issues": "https://github.com/pehape/data-tree/issues/"
+    },
     "require": {
         "php": ">=5.4.0"
     },
     "require-dev": {
-        "codeception/codeception": "2.1.*"
+        "codeception/codeception": "2.1.*",
+        "pehape/tools": "^1.0",
+        "squizlabs/php_codesniffer": "^2.6"
     },
     "autoload": {
-        "classmap": ["src/"]
+        "psr-4": {
+            "Pehape\\TextImage\\": "src"
+        },
+        "classmap": [
+            "src/Exceptions/exceptions.php"
+        ]
     },
-    "minimum-stability": "dev"
+    "scripts": {
+        "test": "vendor\\bin\\codecept run --env local",
+        "syntax": "vendor\\bin\\phpcs --standard=vendor/pehape/tools/assets/coding-standards/standards.xml --colors --encoding=utf-8 -sp src/",
+        "syntax-fix": "vendor\\bin\\phpcbf --standard=vendor/pehape/tools/assets/coding-standards/standards.xml src/"
+    }
 }
