--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         "issues": "https://github.com/pehape/data-tree/issues/"
     },
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "pehape/tools": "^1.0"
     },
     "require-dev": {
         "codeception/codeception": "2.1.*",
-        "pehape/tools": "^1.0",
         "squizlabs/php_codesniffer": "^2.6"
     },
     "autoload": {
